--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Struttura Discord</title>
 </head>
 <body>
-    
+    <header class="flex-con">
+        <div class="container">
+            <nav class="flex-con">
+                <div class="navbar side">
+                    <span>logo</span>
+                </div>
+                <div class="navbar center">
+                    <ul class="flex-con">
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                    </ul>
+                </div>
+                <div class="navbar side rt-align">
+                    <span>login</span>
+                </div>
+            </nav>
+        </div>
+    </header>.
 </body>
 </html>
