added main section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="flex-con">
         <div class="container">
             <nav class="flex-con">
-                <div class="navbar side">
+                <div class="navbar side dashed">
                     <span>logo</span>
                 </div>
-                <div class="navbar center">
+                <div class="navbar center dashed">
                     <ul class="flex-con">
                         <li><a href="#">link</a></li>
                         <li><a href="#">link</a></li>
@@ -23,11 +23,18 @@
                         <li><a href="#">link</a></li>
                     </ul>
                 </div>
-                <div class="navbar side rt-align">
+                <div class="navbar side dashed rt-align">
                     <span>login</span>
                 </div>
             </nav>
         </div>
-    </header>.
+    </header>
+    <main>
+        <section id="main-section" class="flex-con  p-50">
+            <div class="center-box dashed">
+                
+            </div>      
+        </section>
+    </main>
 </body>
 </html>
