added secondary sections

--- a/index.html
+++ b/index.html
@@ -30,11 +30,46 @@
         </div>
     </header>
     <main>
-        <section id="main-section" class="flex-con  p-50">
+
+        <section id="main-section" class="flex-con">
             <div class="center-box dashed">
                 
             </div>      
         </section>
+
+        <div class="secondary-section flex-con gray-bg">
+            <div class="container flex-con">
+                <div class="big-box dashed">
+
+                </div>
+                <div class="small-box dashed">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="secondary-section flex-con white-bg">
+            <div class="container flex-con row-reverse">
+                <div class="big-box dashed">
+
+                </div>
+                <div class="small-box dashed">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="secondary-section flex-con gray-bg">
+            <div class="container flex-con">
+                <div class="big-box dashed">
+
+                </div>
+                <div class="small-box dashed">
+
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
