added closing section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>      
         </section>
 
-        <div class="secondary-section flex-con gray-bg">
+        <section class="secondary-section flex-con white-bg">
             <div class="container flex-con">
                 <div class="big-box dashed">
 
@@ -46,9 +46,9 @@
 
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="secondary-section flex-con white-bg">
+        <section class="secondary-section flex-con gray-bg">
             <div class="container flex-con row-reverse">
                 <div class="big-box dashed">
 
@@ -57,9 +57,9 @@
 
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="secondary-section flex-con gray-bg">
+        <section class="secondary-section flex-con white-bg">
             <div class="container flex-con">
                 <div class="big-box dashed">
 
@@ -68,7 +68,15 @@
 
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section id="closing-section" class="flex-con gray-bg">
+            <div class="container flex-con">
+                <div class="cl-section-box dashed">
+
+                </div>
+            </div>
+        </section>
 
     </main>
 </body>
