added link section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,33 @@
                 </div>
             </div>
         </section>
-
     </main>
+
+    <section id="link-section" class="flex-con">
+        <div class="container link-con flex-con">
+            <div class="link-big-box">
+
+            </div>
+            <div class="link-box-container dashed flex-con">
+                <div class="link-small-box white dashed">
+
+                </div>
+                <div class="link-small-box white dashed">
+
+                </div>
+                <div class="link-small-box white dashed">
+
+                </div>
+                <div class="link-small-box white dashed">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="flex-con">
+        <hr>
+        <div class="container flex-con footer-con"></div>
+    </footer>
+    
 </body>
 </html>
