added footer - end

--- a/index.html
+++ b/index.html
@@ -100,9 +100,16 @@
             </div>
         </div>
     </section>
+
     <footer class="flex-con">
-        <hr>
-        <div class="container flex-con footer-con"></div>
+        <div class="container flex-con footer-con">
+            <div class="footer-box flex-con">
+                <div id="logo" class="footer-content p-5 dashed">
+                    Logo
+                </div>
+                <button class="footer-content p-5 dashed">Bottone</button>
+            </div>
+        </div>
     </footer>
     
 </body>
